docs: avoid sidebar overflow via border-box

--- a/src/style.css
+++ b/src/style.css
@@ -198,7 +198,6 @@ a.btn {
   align-self: start;
   max-height: calc(100vh - 140px);
   overflow: auto;
-  overflow-x: hidden;
   padding-right: 8px;
   display: flex;
   flex-direction: column;
@@ -215,6 +214,7 @@ a.btn {
 .docsLink {
   display: block;
   width: 100%;
+  box-sizing: border-box;
   text-align: left;
 }
 
